# workshop-tailscale-replay-2026

./: .env.example  .gitignore  404.html  README.md  activities.go  activities_test.go  go.mod  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml  temporal.toml  temporal.toml.example  workflow.go  workflow_test.go
.github/workflows/: docs.yml
architecture/: index.html
cmd/worker/: main.go
docs/: architecture.md  index.md  infrastructure.md  metrics-server.md  run-with-instruqt.md  run-without-instruqt.md  slides.md  try-it-locally.md  workshop-overview.md
docs/stylesheets/: extra.css
exercises/01_hello_tailnet/: README.md
exercises/02_explore_tailscale/: README.md
exercises/03_weather_agent/: README.md
exercises/04_go_agent/: README.md
infrastructure/: index.html
instructor/: README.md  run_server.sh
instruqt/: config.yml  track.yml
instruqt/01-hello-tailnet/: assignment.md  check-workshop  setup-workshop  solve-workshop
instruqt/02-explore-tailscale/: assignment.md  check-workshop  setup-workshop  solve-workshop
instruqt/03-weather-agent/: assignment.md  check-workshop  setup-workshop  solve-workshop
instruqt/04-go-agent/: assignment.md  check-workshop  setup-workshop
instruqt/track_scripts/: setup-workshop
metrics-server/: index.html
run-with-instruqt/: index.html
run-without-instruqt/: index.html
scripts/: push-instruqt-tailscale.sh  setup_env.sh  verify_setup.py
search/: search_index.json
slides/: index.html  package.json  pnpm-lock.yaml  slides.md
try-it-locally/: index.html
workshop-overview/: index.html
(+71 files in other folders)
